# lmdb-mcp

./: README.md  pyproject.toml  readme_mcp_dev.md  readme_mcp_small.md
lmdb_mcp/: __init__.py  server.py
tests/: test_lmdb_mcp.py
