[project]
name = "lmdb-mcp"
version = "0.1.0"
description = "FastMCP tools for generic LMDB navigation"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "lmdb",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
